--- a/restaurant/src/main/resources/templates/login.html
+++ b/restaurant/src/main/resources/templates/login.html
@@ -13,6 +13,7 @@
 <form action="/loginProc" method="post" name="loginForm">
   <input id="username" type="text" name="username" placeholder="id"/>
   <input id="password" type="password" name="password" placeholder="password"/>
+  <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
   <input type="submit" value="login"/>
 </form>
 </body>
